Update authtor and remove description in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: David R. Chapman
-author: David R. Chapman
-description: Website of David R. Chapman
+author: [David R. Chapman](https://www.davidrchapman.com)
 theme: minima
