--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,14 @@
 title: David R. Chapman
 author: [David R. Chapman](https://www.davidrchapman.com)
 theme: minima
+
+minima:
+  skin: auto
+
+  header_pages:
+  - about.md
+  - work.md
+  - resume.md
+  - contact.md
+
+  
