Re-format the author field in  _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 title: David R. Chapman
-author: [David R. Chapman](https://www.davidrchapman.com)
+author:
+  name: David R. Chapman
+  email: mailto@davidrchapman.com
 theme: minima
