--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: 
-author: 
-details: 
+title: David R. Chapman
+author: @davidrchapman
+details: &copy; 2024 - David R. Chapman
 theme: minima
 
 minima:
