--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: David R. Chapman
 author:  
-details: &copy; 2024 - David R. Chapman
+details: @ 2024 - David R. Chapman
 theme: minima
 
 minima:
