--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,7 @@ description: Copyright 2024
 theme: minima
 
 minima:
-  header_pages:
-    - about.md
-    - work.md
-    - resume.md
-    - contact.md
+  social_links:
+    - { platform: linkedin,  user_url: "http://www.linkedin.com/in/davidrchapman" }
+    - { platform: facebook,  user_url: "http://www.facebook.com/davidrchapman" }
+    - { platform: github,  user_url: "http://github.com/davidrchapman" }
